# linear-mcp

./: .env.example  .gitignore  .mcp.json.example  CLAUDE.md  README.md  agent.py  linear_client.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  tools.py
.github/workflows/: ci.yml  refresh-schema.yml
scripts/: fetch_schema.py
src/linear_mcp/: client.py  server.py
tests/: test_client.py  test_schema_validation.py
