[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "linear-mcp"
version = "0.2.0"
description = "Linear MCP server for Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["linear", "mcp", "claude", "claude-code", "project-management"]
dependencies = [
    "httpx>=0.27.0",
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.4",
]

[project.scripts]
linear-mcp = "linear_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/linear_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
